[tool.poetry]
name = "bali-core"
version = "3.5.1"
description = ""
authors = ["Josh Yu <josh.yu_8@live.com>"]
license = "MIT"
readme = "README.md"

# fix package dir
packages = [{include = "bali", from = "."}]

[tool.poetry.dependencies]
python = "^3.8"

greenlet = ">1.0,<=2.0.1"
aiomysql = "^0.1.1"
aiosqlite = "^0.18.0"
dateparser = ">=1.1.0"
fastapi = {version = ">=0.69.0,<=0.92", extras = ["all"]}
fastapi-migrate = "^0.1.1"
fastapi-pagination = ">=0.9.0,<=0.10"
grpcio = ">=1.32.0,<=1.50.0"
grpcio-tools = ">=1.32.0,<=1.50.0"
grpc-interceptor = "^0.15.0"
importlib-metadata = "<5.0.0"
kombu = ">=5.2.4,<6.0"
markupsafe = "^2.1.2"
pymysql = ">=0.9,<=1.0.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pillow = ">=7.2.0,<8.4"
pydantic-sqlalchemy = ">=0.0.7,<1"
pyhumps = "^3.8.0"
pytz = "^2022.7.1"
redis = ">=3.5.3,<4.3"
regex = "^2022.10.31"
sqla-wrapper = ">=5.0.0,<5.6"
typer = ">=0.4"
environs = "^9.5.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
mkautodoc = "^0.2.0"
mkdocs-material = "^9.1.1"
pytest = ">=6.1.2,<7"
pytest-asyncio = ">=0.15.0"
pytest-cov = "^4.0.0"
pytest-grpc = "^0.8.0"
pytest-mock = "^3.10.0"
twine = "^4.0.2"
wheel = "^0.38.4"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | dist
  )/
  | setup.py         # also separately exclude a file in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
