[tool.poetry]
name = "bali-workspace"
version = "3.5.1"
description = ""
authors = ["Josh Yu <josh.yu_8@live.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^21.12b0"}
coverage = "^7.2.1"
mkautodoc = "^0.2.0"
mkdocs-material = "^9.1.1"
pytest = ">=6.1.2,<7"
pytest-asyncio = ">=0.15.0"
pytest-cov = "^4.0.0"
pytest-grpc = "^0.8.0"
pytest-mock = "^3.10.0"
twine = "^4.0.2"
wheel = "^0.38.4"

[tool.black]
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | dist
  )/
  | setup.py         # also separately exclude a file in
                     # the root of the project
)
'''

[tool.poetry-workspace-plugin]
workspaces = {bali-core = "bali-core",bali-cli = "bali-cli",bali-sqlalchemy = "bali-sqlalchemy",bali-deploy = "bali-deploy",bali-django = "bali-django"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
