[tool.poetry]
name = "bali-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bali_cli"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
grpcio = "^1.32.0"
grpcio-tools = "^1.32.0"
GitPython = "^3.1.40"
Jinja2 = "^3.1.2"
MarkupSafe = "2.0.1"
protobuf2pydantic = "^2023.1.25"
pydantic = "^1.7"
typer = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
