[tool.poetry]
name = "bali-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bali_django"}]

[tool.poetry.dependencies]
python = "^3.8"
django-rework = "^0.6.0"
bali-core = "^3.5.1"
bali-cli = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
